fixed some spacing

--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ header {
   background-size: cover;
   height: 150px;
   margin-left: 25px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 #work-2 {
@@ -152,7 +152,7 @@ header {
   background-size: cover;
   height: 150px;
   margin-left: 25px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 #work-3 {
@@ -160,7 +160,7 @@ header {
   background-image: url("../images/02-portfolio-3.jpg");
   height: 150px;
   margin-left: 25px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 #work-4 {
